# stu-agent

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt  spec.md
.github/workflows/: ci.yml  test.yml
config/: settings.yaml
config/skills/: writing.yaml
config/templates/: course_paper.docx  course_paper.yaml  lab_report.yaml  report.md
spec/: architecture.md  index.md  milestones.md  overview.md  testing.md  workflow.md
spec/milestones/: M0-skeleton.md  M1-chat-agent.md  M2-tool-agent.md  M3-skill-system.md  M4-writing-agent.md  M5-desktop-agent.md  M6-release.md
src/agent/: agent.py  events.py  executor.py  loop.py  session.py  types.py
src/config/: settings.py
src/converter/: markdown_to_word.py  template_manager.py
src/llm/: base.py  factory.py  models.py  openai_compat.py  openai_provider.py  stream_parser.py
src/observability/: config.py  observer.py  tracer.py
src/skills/: __init__.py
src/tools/: base.py  bash_tool.py  file_tools.py  registry.py
tests/: conftest.py
tests/integration/: test_agent_e2e.py  test_agent_session_tools.py  test_observability_e2e.py  test_skill_integration.py
tests/manual/: test_m4_e2e.py  test_skill_real.py
tests/unit/: test_agent.py  test_agent_events.py  test_agent_executor.py  test_agent_loop.py  test_agent_session.py  test_agent_types.py  test_file_tools.py  test_llm_base.py  test_llm_factory.py  test_llm_models.py  test_m4_scripts.py  test_markdown_to_word.py  test_observability_config.py  test_observability_observer.py  test_observability_tokens.py  test_observability_tracer.py  (+8 more)
(+8 files in other folders)
