[project]
name = "stu-agent"
version = "0.1.0"
description = "面向中国大学生的通用桌面 Agent"
requires-python = ">=3.10"
dependencies = [
    "nicegui>=2.0.0",
    "openai>=1.0.0",
    "python-docx>=1.0.0",
    "lxml>=5.0.0",
    "markdown>=3.5.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
pdf = [
    "weasyprint>=60.0",
    "reportlab>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
norecursedirs = ["manual"]
